# tenir-gov

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  HARDENING_REPORT_v1.0.0-rc2.md  README.md  pyproject.toml
.github/workflows/: tenir-ci.yml
r4/: pyproject.toml
r4/examples/: ocp_sovereignty_pilot.html  ocp_sovereignty_pilot_sample.json
r4/tenir_v4_test/: __init__.py  adjudication.py  models.py
r4/tests/: test_governance_integration.py  test_monitor.py
r4/tools/: generate_ocp_sovereignty_pilot.py
r5_hardened/IRON_OMEGA_R5/: r5_server.py  test_institutional_hardening.py  test_r5_all.py
r5_hardened/IRON_OMEGA_R5/r5_distributed_crypto/merkle/: distributed_ledger.py
r5_hardened/IRON_OMEGA_R5/r5_graph_ontology/: neo4j_graph.py
r5_hardened/IRON_OMEGA_R5/r5_neuro_symbolic/inference/: nsl_inference.py
r5_hardened/IRON_OMEGA_R5/r5_neuro_symbolic/training/: dataset_generator.py
r5_wired/: README_R5.md  r5_server.py
r5_wired/core/: ces_matrix.py
r5_wired/r5_distributed_crypto/merkle/: distributed_ledger.py
r5_wired/r5_websocket/vps_live/: vps_r5_live.html
tenir_governance/: __init__.py  nomenclature.py  policy_engine.py  regression_corpus.py  sdk.py  validator.py
tenir_governance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: benchmark.ts  test_regression_corpus.py  test_sprints_9_10_11.py
