[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenir-governance"
version = "1.0.0rc2"
description = "TENIR 2C Institutional Governance Runtime — R4+R5 Unified"
requires-python = ">=3.10"

[project.scripts]
tenir-validate = "tenir_governance.validator:main"
tenir-sdk      = "tenir_governance.sdk:main"

[tool.setuptools]
packages = ["tenir_governance"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = "-v --tb=short"

[tool.coverage.run]
source = ["tenir_governance"]
omit   = ["tests/*"]
